Se agregan fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>PreEntrega2</title>
 </head>
@@ -63,13 +67,14 @@
 
     <footer>
 
-        
-            <h3>Buenos
-                <br> 
-                Aires
-                <br> 
-                Burguers</h3>
-        
+
+        <h3>Buenos
+            <br>
+            Aires
+            <br>
+            Burguers
+        </h3>
+
 
         <div class="contacto-footer">
 
