--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>contacto</title>
 
@@ -56,13 +60,13 @@
             </div>
 
             <div>
-            <label for="asunto-usuario">Seleccione el asunto del mensaje</label>
-            <select name="" id="asunto-usuario">
-                <option value="">Postularme</option>
-                <option value="">Recomendacion</option>
-                <option value="">Reclamo</option>
-                <option value="">Otro</option>
-            </select>
+                <label for="asunto-usuario">Seleccione el asunto del mensaje</label>
+                <select name="" id="asunto-usuario">
+                    <option value="">Postularme</option>
+                    <option value="">Recomendacion</option>
+                    <option value="">Reclamo</option>
+                    <option value="">Otro</option>
+                </select>
             </div>
 
             <label for="texto-usuario">Ingrese su comentario o consulta</label>
@@ -77,33 +81,34 @@
 
     <footer>
 
-        
+
         <h3>Buenos
-            <br> 
+            <br>
             Aires
-            <br> 
-            Burguers</h3>
-    
-
-    <div class="contacto-footer">
-
-        <h4>Contacto</h4>
-        <ul>
-            <li>BsAsBurguers@gmail.com</li>
-            <li>Derechos reservados © 2023</li>
-        </ul>
-    </div>
+            <br>
+            Burguers
+        </h3>
 
 
-    <div class="redes-footer">
-        <ul>
-            <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-        </ul>
-    </div>
+        <div class="contacto-footer">
 
-</footer>
+            <h4>Contacto</h4>
+            <ul>
+                <li>BsAsBurguers@gmail.com</li>
+                <li>Derechos reservados © 2023</li>
+            </ul>
+        </div>
+
+
+        <div class="redes-footer">
+            <ul>
+                <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
+                <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
