--- a/pages/menu.html
+++ b/pages/menu.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>menu</title>
 
@@ -36,52 +40,60 @@
 
             <div class="clasicas">
 
-                <div class="titulo-clasicas"><h2>Clasicas</h2></div>
+                <div class="titulo-clasicas">
+                    <h2>Clasicas</h2>
+                </div>
 
                 <div class="contenedor-clasicas">
 
-                <a href="./pedidos.html"><img src="../img/clasica1.jpg" alt="Hamburguesa"></a>
-                <a href="./pedidos.html"><img src="../img/clasica2.jpg" alt="Hamburguesa"></a>
-                <a href="./pedidos.html"><img src="../img/clasica3.jpg" alt="Hamburguesa"></a>
-                <a href="./pedidos.html"><img src="../img/clasica4.png" alt="Hamburguesa"></a>
-                <a href="./pedidos.html"><img src="../img/clasica5.png" alt="Hamburguesa"></a>
-            </div>
+                    <a href="./pedidos.html"><img src="../img/clasica1.jpg" alt="Hamburguesa"></a>
+                    <a href="./pedidos.html"><img src="../img/clasica2.jpg" alt="Hamburguesa"></a>
+                    <a href="./pedidos.html"><img src="../img/clasica3.jpg" alt="Hamburguesa"></a>
+                    <a href="./pedidos.html"><img src="../img/clasica4.png" alt="Hamburguesa"></a>
+                    <a href="./pedidos.html"><img src="../img/clasica5.png" alt="Hamburguesa"></a>
+                </div>
 
             </div>
 
             <div class="especiales">
 
-                <div class="titulo-especiales"><h2>Especiales</h2></div>
+                <div class="titulo-especiales">
+                    <h2>Especiales</h2>
+                </div>
 
                 <div class="contenedor-especiales">
 
-                <a href="./pedidos.html"><img src="../img/especial1.jpg" alt="Hamburguesa"></a>
-                <a href="./pedidos.html"><img src="../img/especial2.jpg" alt="Hamburguesa"></a>
-            </div>
+                    <a href="./pedidos.html"><img src="../img/especial1.jpg" alt="Hamburguesa"></a>
+                    <a href="./pedidos.html"><img src="../img/especial2.jpg" alt="Hamburguesa"></a>
+                </div>
 
             </div>
 
             <div class="vegetarianas">
 
-                <div class="titulo-vegetarianas"><h2>Vegetarianas</h2></div>
+                <div class="titulo-vegetarianas">
+                    <h2>Vegetarianas</h2>
+                </div>
 
                 <!-- <div class="contenedor-vegetarianas"> -->
 
                 <a href="./pedidos.html"><img src="../img/vegetariana1.jpg" alt="Hamburguesa"></a>
-            <!-- </div> -->
+                <!-- </div> -->
 
             </div>
 
             <div class="acompañamientos">
 
-                <div class="titulo-acompañamientos"><h2>Acompaña tu hamburguesa</h2></div>
+                <div class="titulo-acompañamientos">
+                    <h2>Acompaña tu hamburguesa</h2>
+                </div>
 
                 <div class="contenedor-acompañamientos">
 
-                <a href="./pedidos.html"><img src="../img/papas.png" alt="Papas fritas"></a>
-                <a href="./pedidos.html"><img src="../img/arosdecebolla.png" alt="Aros de cebolla"></a>
-                <a href="./pedidos.html"><img src="../img/ensalada.png" alt="Ensalada mediterranea"></a>
-            </div>
+                    <a href="./pedidos.html"><img src="../img/papas.png" alt="Papas fritas"></a>
+                    <a href="./pedidos.html"><img src="../img/arosdecebolla.png" alt="Aros de cebolla"></a>
+                    <a href="./pedidos.html"><img src="../img/ensalada.png" alt="Ensalada mediterranea"></a>
+                </div>
 
             </div>
         </section>
