--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>sucursales</title>
 
@@ -76,9 +80,9 @@
                     width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                </div>
+            </div>
 
-                <div>
+            <div>
                 <h3>Nuñez</h3>
 
                 <img src="../img/local3a.png" alt="sucursal3">
@@ -97,40 +101,41 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1643.1667029593375!2d-58.46088536146496!3d-34.545112883960094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb426d2d71fd7%3A0x7562548e054a5f4d!2sAv.%20del%20Libertador%207456%2C%20C1429BMU%20CABA!5e0!3m2!1ses-419!2sar!4v1700768723413!5m2!1ses-419!2sar"
                     width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+            </div>
         </section>
 
     </main>
 
     <footer>
 
-        
+
         <h3>Buenos
-            <br> 
+            <br>
             Aires
-            <br> 
-            Burguers</h3>
-    
-
-    <div class="contacto-footer">
-
-        <h4>Contacto</h4>
-        <ul>
-            <li>BsAsBurguers@gmail.com</li>
-            <li>Derechos reservados © 2023</li>
-        </ul>
-    </div>
+            <br>
+            Burguers
+        </h3>
 
 
-    <div class="redes-footer">
-        <ul>
-            <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-        </ul>
-    </div>
+        <div class="contacto-footer">
 
-</footer>
+            <h4>Contacto</h4>
+            <ul>
+                <li>BsAsBurguers@gmail.com</li>
+                <li>Derechos reservados © 2023</li>
+            </ul>
+        </div>
+
+
+        <div class="redes-footer">
+            <ul>
+                <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
+                <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+            </ul>
+        </div>
+
+    </footer>
 
 </body>
 
