--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>pedidos</title>
 
@@ -36,13 +40,13 @@
 
         <section>
 
-        <a href="https://www.pedidosya.com.ar/"><img src="../img/icono-pedidosya.png" alt="icono de pedidosya"></a>
+            <a href="https://www.pedidosya.com.ar/"><img src="../img/icono-pedidosya.png" alt="icono de pedidosya"></a>
 
-        <a href="https://www.pedidosya.com.ar/"><input type="submit" value="Pedir"></a>
+            <a href="https://www.pedidosya.com.ar/"><input type="submit" value="Pedir"></a>
 
-        <a href="https://www.rappi.com.ar/"><img src="../img/icono-rappi.png" alt="icono de rappi"></a>
+            <a href="https://www.rappi.com.ar/"><img src="../img/icono-rappi.png" alt="icono de rappi"></a>
 
-        <a href="https://www.rappi.com.ar/"><input type="submit" value="Pedir"></a>
+            <a href="https://www.rappi.com.ar/"><input type="submit" value="Pedir"></a>
 
         </section>
 
@@ -50,33 +54,34 @@
 
     <footer>
 
-        
+
         <h3>Buenos
-            <br> 
+            <br>
             Aires
-            <br> 
-            Burguers</h3>
-    
-
-    <div class="contacto-footer">
-
-        <h4>Contacto</h4>
-        <ul>
-            <li>BsAsBurguers@gmail.com</li>
-            <li>Derechos reservados © 2023</li>
-        </ul>
-    </div>
+            <br>
+            Burguers
+        </h3>
 
 
-    <div class="redes-footer">
-        <ul>
-            <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-        </ul>
-    </div>
+        <div class="contacto-footer">
 
-</footer>
+            <h4>Contacto</h4>
+            <ul>
+                <li>BsAsBurguers@gmail.com</li>
+                <li>Derechos reservados © 2023</li>
+            </ul>
+        </div>
+
+
+        <div class="redes-footer">
+            <ul>
+                <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
+                <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
