Se agrega texto en index

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <img src="./img/hamburguesa-index2.png" alt="imagen de hamburguesa">
             </div>
 
-            <p class="texto-index">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ad, totam
-                facere, reiciendis
-                eveniet hic doloribus architecto autem tempore soluta deserunt quae, eum dolorem minus qui. Natus
-                culpa ducimus eum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, rerum similique
-                laudantium commodi eum perspiciatis voluptatibus, quisquam, officia vel incidunt illo! Odit nisi magni
-                voluptate minus. Reiciendis dignissimos tempora dolores.</p>
+            <p class="texto-index">Nacimos en 2005 en Vicente Lopez, provenientes de una extensa tradición gastronómica
+                familiar. Al principio, nos dedicamos a la comida casera, y luego, nos obsesionamos con las
+                hamburguesas. El impacto en la gente fue muy positivo, y gracias a eso, y a la recomendación boca a
+                boca, nos convertimos en un culto para los amantes de las hamburguesas. Trabajamos con productores
+                locales, apoyando su desarrollo y utilizamos alimentos libres de agroquímicos. Seguinos en redes
+                sociales y enterate de promociones y sorteos que tenemos para vos! </p>
 
         </section>
 
