--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -55,11 +55,11 @@
     <footer>
 
 
-        <h3>Buenos
-            <br>
-            Aires
-            <br>
-            Burguers
+        <h3><div>Buenos</div>
+            
+            <div>Aires</div>
+            
+            <div>Burguers</div>
         </h3>
 
 
