--- a/pages/menu.html
+++ b/pages/menu.html
@@ -103,13 +103,12 @@
     <footer>
 
 
-        <h3>Buenos
-            <br>
-            Aires
-            <br>
-            Burguers
+        <h3><div>Buenos</div>
+            
+            <div>Aires</div>
+            
+            <div>Burguers</div>
         </h3>
-
 
         <div class="contacto-footer">
 
