--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&family=Rubik+Bubbles&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>contacto</title>
 
 </head>
@@ -16,7 +17,10 @@
 <body>
     <header>
 
-        <a href="../index.html"><img src="../img/logo3.jpg" alt="logo"></a>
+        <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
+            <a href="./index.html"><img src="../img/logo3.jpg" alt="logo"></a>
+        </div>
+
 
         <nav>
 
@@ -113,13 +117,18 @@
 
         <div class="redes-footer">
             <ul>
-                <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
-                <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-                <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+                <li><a href="https://twitter.com/home" target="_blank"><span style="color: white"><i class="fa-brands fa-x-twitter"></i></span></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><span style="color: rgb(219, 87, 109)"></style> <i class="fa-brands fa-instagram"></i></span></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><span style="color: rgb(25, 25, 155)"></style> <i class="fa-brands fa-facebook"></i></span></a></li>
             </ul>
         </div>
 
     </footer>
+    <script src="https://kit.fontawesome.com/e4cc701576.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
